--- a/.github/workflows/encrypt-names.yml
+++ b/.github/workflows/encrypt-names.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3 # Update to use the latest version
+      uses: actions/checkout@v3
 
     - name: Set up Node.js
-      uses: actions/setup-node@v3 # This is already the latest version
+      uses: actions/setup-node@v3
       with:
         node-version: '20'
 
@@ -52,7 +52,18 @@ jobs:
     - name: Run encryption script
       run: node encrypt.js
 
+    - name: Commit and push changes
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git add docs/encrypted-77.json
+        git commit -m 'Update encrypted JSON'
+        git push origin main
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Deploy to GitHub Pages
+      if: success()  # Only run if the previous steps were successful
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
