--- a/.github/workflows/encrypt-names.yml
+++ b/.github/workflows/encrypt-names.yml
@@ -27,45 +27,43 @@ jobs:
       run: |
         cat << 'EOF' > encrypt.js
         const fs = require('fs');
-        const key = process.env.ENCRYPTION_KEY;
-        const XORCipher = (input, key) => {
-          let output = '';
-          for (let i = 0; i < input.length; i++) {
-            output += String.fromCharCode(input.charCodeAt(i) ^ key.charCodeAt(i % key.length));
-          }
-          return output;
+        const shift = parseInt(process.env.CAESAR_SHIFT, 10);
+
+        const caesarShift = (text, shiftAmount) => {
+          return text.split('').map(char => {
+            let code = char.charCodeAt(0);
+
+            if (code >= 65 && code <= 90) {
+              // Uppercase letters
+              code = ((code - 65 + shiftAmount) % 26 + 26) % 26 + 65;
+            } else if (code >= 97 && code <= 122) {
+              // Lowercase letters
+              code = ((code - 97 + shiftAmount) % 26 + 26) % 26 + 97;
+            }
+
+            return String.fromCharCode(code);
+          }).join('');
         };
-        const data = JSON.parse(fs.readFileSync('77.json', 'utf8'));
 
-        const encryptSection = (section) => section.map(user => XORCipher(user, key));
+        const encryptSection = section => Object.fromEntries(
+          Object.entries(section).map(([key, value]) => [key, caesarShift(value, shift)])
+        );
 
-        // Encrypt GlobalRanks sections
-        if (data.GlobalRanks) {
-          if (data.GlobalRanks.Staff) data.GlobalRanks.Staff = encryptSection(data.GlobalRanks.Staff);
-          if (data.GlobalRanks.Media) data.GlobalRanks.Media = encryptSection(data.GlobalRanks.Media);
-          if (data.GlobalRanks.Whale) data.GlobalRanks.Whale = encryptSection(data.GlobalRanks.Whale);
-          if (data.GlobalRanks.Hero) data.GlobalRanks.Hero = encryptSection(data.GlobalRanks.Hero);
-          if (data.GlobalRanks.Supporter) data.GlobalRanks.Supporter = encryptSection(data.GlobalRanks.Supporter);
-          if (data.GlobalRanks.Homie) data.GlobalRanks.Homie = encryptSection(data.GlobalRanks.Homie);
-          if (data.GlobalRanks.VIP) data.GlobalRanks.VIP = encryptSection(data.GlobalRanks.VIP);
-        }
+        const data = JSON.parse(fs.readFileSync('77-permissions.json', 'utf8'));
+
+        // Encrypt relevant sections
+        if (data.Staff) data.Staff = encryptSection(data.Staff);
+        if (data.Supporter) data.Supporter = encryptSection(data.Supporter);
+        if (data.VIP) data.VIP = encryptSection(data.VIP);
 
         // Encrypt Apartment details
-        if (data.AreaSettings) {
-          for (const area in data.AreaSettings) {
-            for (const apartment in data.AreaSettings[area]) {
-              if (data.AreaSettings[area][apartment].Owner) {
-                data.AreaSettings[area][apartment].Owner = XORCipher(data.AreaSettings[area][apartment].Owner, key);
-              }
-              if (data.AreaSettings[area][apartment].Access) {
-                const access = data.AreaSettings[area][apartment].Access;
-                const encryptedAccess = {};
-                for (const key in access) {
-                  encryptedAccess[XORCipher(key, key)] = access[key];
-                }
-                data.AreaSettings[area][apartment].Access = encryptedAccess;
-              }
-            }
+        if (data.Apartment1_R4) {
+          if (data.Apartment1_R4.Owner) {
+            data.Apartment1_R4.Owner = caesarShift(data.Apartment1_R4.Owner, shift);
+          }
+          if (data.Apartment1_R4.Access) {
+            data.Apartment1_R4.Access0 = caesarShift(data.Apartment1_R4.Access0, shift);
+            data.Apartment1_R4.Access1 = caesarShift(data.Apartment1_R4.Access1, shift);
           }
         }
 
@@ -73,12 +71,12 @@ jobs:
         fs.writeFileSync('docs/encrypted-77.json', JSON.stringify(data, null, 2));
         EOF
       env:
-        ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
+        CAESAR_SHIFT: ${{ secrets.CAESAR_SHIFT }}
 
     - name: Run encryption script
       run: node encrypt.js
       env:
-        ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
+        CAESAR_SHIFT: ${{ secrets.CAESAR_SHIFT }}
 
     - name: Commit and push changes
       run: |
